name:                knight
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sampersand/knight#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Westerman
maintainer:          sam@sampersand.me
copyright:           2021 Sam Westerman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable knight
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
