[package]
name = "knightrs"
version = "0.8.5"
authors = ["Sam Westerman <sam@sampersand.me>"]
edition = "2018"
description = "The Knight programming language, in Rust"
repository = "https://github.com/sampersand/knight"

[features]
default = []
embedded = [] # remove functions that need to access the file system.
# multithreaded = []
checked-overflow = []

[dependencies]
rand = "0.8"
once_cell = "1.7"
lazy_static = "1.4"
parking_lot = "0.11"
clap = "2.33"
cfg-if = "1.0"
